--- a/optuna.ipynb
+++ b/optuna.ipynb
@@ -39,7 +39,7 @@
     "    df2[\"z\"] = df2[\"z\"] + numpy.random.rand(len(df2)) * scale + dummy\n",
     "    lm.fit(df2[[\"x\", \"y\"]], df2[\"z\"])\n",
     "    obj = lm.score(df2[[\"x\", \"y\"]], df2[\"z\"])\n",
-    "    return obj"
+    "    return -obj"
    ]
   },
   {
@@ -96,13 +96,7 @@
       "[I 2018-12-04 22:51:58,568] Finished a trial resulted in value: 0.023429365149877146. Current best value is -0.009291561458389497 with parameters: {'intercept': 0, 'dummy': 0.5118260736008265, 'scale': 4.885769435196551}.\n",
       "[I 2018-12-04 22:51:58,584] Finished a trial resulted in value: 0.06277621631585073. Current best value is -0.009291561458389497 with parameters: {'intercept': 0, 'dummy': 0.5118260736008265, 'scale': 4.885769435196551}.\n",
       "[I 2018-12-04 22:51:58,599] Finished a trial resulted in value: 0.46684193986010175. Current best value is -0.009291561458389497 with parameters: {'intercept': 0, 'dummy': 0.5118260736008265, 'scale': 4.885769435196551}.\n",
-      "[I 2018-12-04 22:51:58,619] Finished a trial resulted in value: 0.10797167733424107. Current best value is -0.009291561458389497 with parameters: {'intercept': 0, 'dummy': 0.5118260736008265, 'scale': 4.885769435196551}.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "[I 2018-12-04 22:51:58,619] Finished a trial resulted in value: 0.10797167733424107. Current best value is -0.009291561458389497 with parameters: {'intercept': 0, 'dummy': 0.5118260736008265, 'scale': 4.885769435196551}.\n",
       "[I 2018-12-04 22:51:58,636] Finished a trial resulted in value: 0.09808896887732999. Current best value is -0.009291561458389497 with parameters: {'intercept': 0, 'dummy': 0.5118260736008265, 'scale': 4.885769435196551}.\n",
       "[I 2018-12-04 22:51:58,653] Finished a trial resulted in value: -0.020988209101452382. Current best value is -0.020988209101452382 with parameters: {'intercept': 0, 'dummy': 0.5480415742272831, 'scale': 4.937984430059335}.\n",
       "[I 2018-12-04 22:51:58,675] Finished a trial resulted in value: 0.32053711157481823. Current best value is -0.020988209101452382 with parameters: {'intercept': 0, 'dummy': 0.5480415742272831, 'scale': 4.937984430059335}.\n",
